@@ -46,7 +46,7 @@ generic output module.
 Thanks to Luke Yelavich <themuso at themuseo point com> for contributing
 fixes for the audio output subsystem.
 
-Thanks to Gilless Casse <gcasse at oralux point com> for contributing
-the Pulse Audio output module.
+Thanks to Gilles Casse <gcasse at oralux point org> for contributing
+the PulseAudio output module.
 
 ...and to many others.
